<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:notebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.hneao.notebook.MainActivity" >
	<item android:id="@+id/action_search"
	    android:title="@string/action_search"
	    android:icon="@drawable/ic_action_search"
	    notebook:showAsAction="ifRoom|collapseActionView"
	    notebook:actionViewClass="android.support.v7.widget.SearchView"/>
	<item android:id="@+id/action_add"
	    android:title="@string/action_add"
	    android:icon="@drawable/ic_action_new"
	    notebook:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        notebook:showAsAction="never"/>
</menu>
